[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "libtor"
version = "0.1.0"
description = "A pure-Python implementation of the Tor protocol"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Dario Clavijo", email = "clavijodario@gmail.com"}
]
dependencies = [
    "cryptography>=42.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
    "hatch",
]
test = [
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "pytest-asyncio",
    "hypothesis",
]
lint = [
    "ruff",
    "mypy",
]
all = ["libtor[dev,test,lint]"]

[project.scripts]
libtor = "libtor.__main__:main"

[project.urls]
Homepage = "https://github.com/dclavijo/libtor"
Repository = "https://github.com/dclavijo/libtor"
Issues = "https://github.com/dclavijo/libtor/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/libtor"]

[tool.hatch.build.targets.sdist]
include = ["src/libtor"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "ANN", "TCH", "N", "C4", "ARG"]
ignore = ["E501", "TC004", "F821", "F811", "ANN002", "F841", "ANN201", "ANN202", "ANN204"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"src/libtor/*.py" = ["ANN201", "ANN202", "ANN204", "F841"]
"tests/*.py" = ["ANN201", "ANN202", "F811", "E402"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.11"
strict = false
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true
disable_error_code = ["no-any-return", "union-attr", "name-defined", "assignment", "var-annotated", "no-untyped-def"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short --cov=src"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
exclude = ["tests/*", "*/__init__.py"]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]